--- a/src/app/components/1-welcome/welcome-nav-bar/welcome-nav-bar.component.html
+++ b/src/app/components/1-welcome/welcome-nav-bar/welcome-nav-bar.component.html
@@ -35,26 +35,26 @@
         <!-- Admin Menus -->
         <ul class="navbar-nav my-2 my-lg-0">
             <li class="nav-item" >
-                <button class="btn btn-outline-success my-2 my-sm-0" routerLink="/admin/supervisor"
+                <button class="btn btn-outline-secondary my-2 my-sm-0" routerLink="/admin/supervisor"
                 *ngIf='_AUTH.adminRights([25,26,27,28,29,30])'>Admin : Supervisor</button>
             </li>
             <li class="nav-item" >
-                <button class="btn btn-outline-success my-2 my-sm-0" routerLink="/admin/manager"
+                <button class="btn btn-outline-secondary my-2 my-sm-0" routerLink="/admin/manager"
                 *ngIf='_AUTH.adminRights([31,32,33,34,35,36])'>Admin : Manager</button>
             </li>
             <li class="nav-item" >
-                <button class="btn btn-outline-success my-2 my-sm-0" routerLink="/admin/hr"
+                <button class="btn btn-outline-secondary my-2 my-sm-0" routerLink="/admin/hr"
                 *ngIf='_AUTH.adminRights([37,38,39,40,41,42])'>Admin : HR</button>
             </li>
             <li class="nav-item" >
-                <button class="btn btn-outline-success my-2 my-sm-0" routerLink="/admin/superuser"
+                <button class="btn btn-outline-secondary my-2 my-sm-0" routerLink="/admin/superuser"
                 *ngIf='_AUTH.adminRights([43,44,45,46,47,48])'>Admin : SuperUser</button>
             </li>
             <li class="nav-item" >
-                <button class="btn btn-outline-success my-2 my-sm-0" routerLink="/login">Log In</button>
+                <button class="btn btn-outline-danger my-2 my-sm-0" routerLink="/login">Log In</button>
             </li>
             <li class="nav-item" >
-                <button class="btn btn-outline-success my-2 my-sm-0" routerLink="/userProfile">Settings</button>
+                <button class="btn btn-outline-primary my-2 my-sm-0" routerLink="/userProfile">Settings</button>
             </li>
         </ul>        
     </div>
