--- a/src/app/components/7-admin-manager/admin-manager-nav-bar/admin-manager-nav-bar.component.html
+++ b/src/app/components/7-admin-manager/admin-manager-nav-bar/admin-manager-nav-bar.component.html
@@ -10,22 +10,28 @@
     <div [ngbCollapse]="showMainNav" class="navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item" >
-                <button class="btn btn-outline-primary my-2 my-sm-0" routerLink="/admin/manager/button1" routerLinkActive="active">Button 1</button>
+                <button class="btn btn-outline-primary my-2 my-sm-0" routerLink="/admin/manager/button1"
+                *ngIf='_AUTH.adminRights([31])' routerLinkActive="active">Button 1</button>
             </li>
             <li class="nav-item" >
-                <button class="btn btn-outline-primary my-2 my-sm-0" routerLink="/admin/manager/button2" routerLinkActive="active">Button 2</button>
+                <button class="btn btn-outline-primary my-2 my-sm-0" routerLink="/admin/manager/button2"
+                *ngIf='_AUTH.adminRights([32])' routerLinkActive="active">Button 2</button>
             </li>
             <li class="nav-item" >
-                <button class="btn btn-outline-primary my-2 my-sm-0" routerLink="/admin/manager/button3" routerLinkActive="active">Button 3</button>
+                <button class="btn btn-outline-primary my-2 my-sm-0" routerLink="/admin/manager/button3"
+                *ngIf='_AUTH.adminRights([33])' routerLinkActive="active">Button 3</button>
             </li>
             <li class="nav-item" >
-                <button class="btn btn-outline-primary my-2 my-sm-0" routerLink="/admin/manager/button4" routerLinkActive="active">Button 4</button>
+                <button class="btn btn-outline-primary my-2 my-sm-0" routerLink="/admin/manager/button4"
+                *ngIf='_AUTH.adminRights([34])' routerLinkActive="active">Button 4</button>
             </li>
             <li class="nav-item" >
-                <button class="btn btn-outline-primary my-2 my-sm-0" routerLink="/admin/manager/button5" routerLinkActive="active">Button 5</button>
+                <button class="btn btn-outline-primary my-2 my-sm-0" routerLink="/admin/manager/button5"
+                *ngIf='_AUTH.adminRights([35])' routerLinkActive="active">Button 5</button>
             </li>
             <li class="nav-item" >
-                <button class="btn btn-outline-primary my-2 my-sm-0" routerLink="/admin/manager/button6" routerLinkActive="active">Button 6</button>
+                <button class="btn btn-outline-primary my-2 my-sm-0" routerLink="/admin/manager/button6"
+                *ngIf='_AUTH.adminRights([36])' routerLinkActive="active">Button 6</button>
             </li>
         </ul>
         <!-- Admin Menus -->
