--- a/src/app/components/8-admin-HR/admin-hr-nav-bar/admin-hr-nav-bar.component.html
+++ b/src/app/components/8-admin-HR/admin-hr-nav-bar/admin-hr-nav-bar.component.html
@@ -10,22 +10,28 @@
     <div [ngbCollapse]="showMainNav" class="navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item" >
-                <button class="btn btn-outline-primary my-2 my-sm-0" routerLink="/admin/hr/button1" routerLinkActive="active">Button 1</button>
+                <button class="btn btn-outline-primary my-2 my-sm-0" routerLink="/admin/hr/button1"
+                *ngIf='_AUTH.adminRights([37])' routerLinkActive="active">Button 1</button>
             </li>
             <li class="nav-item" >
-                <button class="btn btn-outline-primary my-2 my-sm-0" routerLink="/admin/hr/button2" routerLinkActive="active">Button 2</button>
+                <button class="btn btn-outline-primary my-2 my-sm-0" routerLink="/admin/hr/button2"
+                *ngIf='_AUTH.adminRights([38])' routerLinkActive="active">Button 2</button>
             </li>
             <li class="nav-item" >
-                <button class="btn btn-outline-primary my-2 my-sm-0" routerLink="/admin/hr/button3" routerLinkActive="active">Button 3</button>
+                <button class="btn btn-outline-primary my-2 my-sm-0" routerLink="/admin/hr/button3"
+                *ngIf='_AUTH.adminRights([39])' routerLinkActive="active">Button 3</button>
             </li>
             <li class="nav-item" >
-                <button class="btn btn-outline-primary my-2 my-sm-0" routerLink="/admin/hr/button4" routerLinkActive="active">Button 4</button>
+                <button class="btn btn-outline-primary my-2 my-sm-0" routerLink="/admin/hr/button4"
+                *ngIf='_AUTH.adminRights([40])' routerLinkActive="active">Button 4</button>
             </li>
             <li class="nav-item" >
-                <button class="btn btn-outline-primary my-2 my-sm-0" routerLink="/admin/hr/button5" routerLinkActive="active">Button 5</button>
+                <button class="btn btn-outline-primary my-2 my-sm-0" routerLink="/admin/hr/button5"
+                *ngIf='_AUTH.adminRights([41])' routerLinkActive="active">Button 5</button>
             </li>
             <li class="nav-item" >
-                <button class="btn btn-outline-primary my-2 my-sm-0" routerLink="/admin/hr/button6" routerLinkActive="active">Button 6</button>
+                <button class="btn btn-outline-primary my-2 my-sm-0" routerLink="/admin/hr/button6"
+                *ngIf='_AUTH.adminRights([42])' routerLinkActive="active">Button 6</button>
             </li>
         </ul>
         <!-- Admin Menus -->
