--- a/src/app/components/9-admin-superUser/admin-super-user-nav-bar/admin-super-user-nav-bar.component.html
+++ b/src/app/components/9-admin-superUser/admin-super-user-nav-bar/admin-super-user-nav-bar.component.html
@@ -10,16 +10,16 @@
     <div [ngbCollapse]="showMainNav" class="navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item" >
-                <button class="btn btn-outline-primary my-2 my-sm-0" routerLink="/admin/superuser/button1"
-                *ngIf='_AUTH.adminRights([43])' routerLinkActive="active">Button 1</button>
+                <button class="btn btn-outline-primary my-2 my-sm-0" routerLink="/admin/superuser/createNewSite"
+                *ngIf='_AUTH.adminRights([43])' routerLinkActive="active">Create New Site</button>
             </li>
             <li class="nav-item" >
-                <button class="btn btn-outline-primary my-2 my-sm-0" routerLink="/admin/superuser/button2"
-                *ngIf='_AUTH.adminRights([44])' routerLinkActive="active">Button 2</button>
+                <button class="btn btn-outline-primary my-2 my-sm-0" routerLink="/admin/superuser/createNewEmployee"
+                *ngIf='_AUTH.adminRights([44])' routerLinkActive="active">Create New Employee</button>
             </li>
             <li class="nav-item" >
-                <button class="btn btn-outline-primary my-2 my-sm-0" routerLink="/admin/superuser/button3"
-                *ngIf='_AUTH.adminRights([45])' routerLinkActive="active">Button 3</button>
+                <button class="btn btn-outline-primary my-2 my-sm-0" routerLink="/admin/superuser/createNewRota"
+                *ngIf='_AUTH.adminRights([45])' routerLinkActive="active">Create New Rota</button>
             </li>
             <li class="nav-item" >
                 <button class="btn btn-outline-primary my-2 my-sm-0" routerLink="/admin/superuser/button4"
